--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="#211E1E">
 
 
     <ImageView
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textAlignment="center"
         android:textStyle="bold|italic" />
 
@@ -34,12 +35,14 @@
             android:id="@+id/prevButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#4AAD4E"
             android:text="Previous" />
 
         <Button
             android:id="@+id/nextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#4AAD4E"
             android:text="Next"
             android:layout_marginStart="16dp" />
     </LinearLayout>
@@ -50,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-580dp"
         android:textSize="28sp"
-        android:textColor="@android:color/black"
+        android:textColor="#C5AF1F"
         android:textAlignment="center"
         android:textStyle="bold"
         android:text="TextView" />
